--- a/T1807E_HelloMVC/Views/Home/About.cshtml
+++ b/T1807E_HelloMVC/Views/Home/About.cshtml
@@ -5,3 +5,6 @@
 <p>@TempData["HelloWorld"]</p>
 <p>@ViewData["HelloCSharp"]</p>
 <p>Use this area to provide additional information.</p>
+@section scripts {
+    <script type="text/javascript">alert('about me');</script>
+}
