--- a/T1807E_HelloMVC/Views/Shared/_CustomLayout.cshtml
+++ b/T1807E_HelloMVC/Views/Shared/_CustomLayout.cshtml
@@ -14,6 +14,7 @@
 </div>
 <div class="panel-footer">
     <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-3.3.1.min.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")"></script>
     @RenderSection("scripts", required: false)
 </div>
 
